# aprendizado-federado

./: .gitignore  README.md  main.py  pyproject.toml  resultados_aprendizado_federado.csv
src/: client.py  evaluates.py  server.py  strategy.py
