[project]
name = "aprendizado-federado"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flwr[simulation]>=1.29.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "tabulate>=0.10.0",
    "tensorflow>=2.21.0",
]
